[package]
name = "tft-iq-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# 비동기 런타임 (안정적인 서버 운영을 위한 필수 엔진)
tokio = { version = "1.0", features = ["full"] }

# HTTP 요청을 보내기 위한 라이브러리 (라이엇 API 호출용)
reqwest = { version = "0.12", features = ["json"] }

# 라이엇이 주는 JSON 데이터를 Rust 구조체(Struct)로 변환해주는 라이브러리
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"